iniciando conexao com banco e 3p commit